--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
     --border_radius_image: 10px;
 }
 
+@font-face {
+    font-family: 'Kumbh Sans';
+    src: url('police/static/KumbhSans-Regular.ttf') format('truetype');
+}
+
 html,
 body {
     height: 100%;
@@ -15,7 +20,6 @@ body {
 .container {
     width: 75%;
     height: 95%;
-    background-color: #54457F;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
@@ -69,7 +73,6 @@ body {
     width: 90%;
     height: auto;
     display: flex;
-    background-color: #EB9FEF;
     justify-content: center;
     align-items: center;
 }
@@ -101,6 +104,132 @@ body {
 .description {
     width: 40%;
     height: 80%;
-    background-color: green;
     margin-left: 100px;
+    display: flex;
+    flex-direction: column;
+}
+
+.title {
+    color: #FF7E1B;
+    font-family: 'Kumbh Sans';
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin-bottom: 80px;
+}
+
+.product_name {
+    color: #1D2026;
+    font-family: 'Kumbh Sans';
+    font-size: 44px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 48px;
+    margin-bottom: 50px;
+}
+
+.product_description {
+    color: #69707D;
+    font-family: 'Kumbh Sans';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    margin-bottom: 50px;
+}
+
+.price_information {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 173px;
+    height: 68px;
+    margin-bottom: 50px;
+}
+
+.price {
+    color: #1D2026;
+    font-family: 'Kumbh Sans';
+    font-size: 28px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-right: 20px;
+    margin-bottom: 0px;
+}
+
+.discount {
+    color: #FF7E1B;
+    font-family: 'Kumbh Sans';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 0px;
+    border-radius: 6px;
+    background: #FFEEE2;
+    padding: 5px;
+}
+
+.original_price {
+    color: #B6BCC8;
+    font-family: 'Kumbh Sans';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 26px;
+    text-decoration-line: line-through;
+}
+
+.command {
+    display: flex;
+    align-items: center;
+    height: 56px;
+}
+
+.delete {
+    margin-right: 60px
+}
+
+.quantity {
+    margin-right: 60px;
+    color: #1D2026;
+    text-align: center;
+    font-family: 'Kumbh Sans';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.add {
+    margin-right: 50px;
+}
+
+.add_to_cart {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 272px;
+    height: 56px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    background: #FF7E1B;
+}
+
+.add_to_cart p {
+    margin-left: 30px;
+    color: #FFF;
+    font-family: 'Kumbh Sans';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.add_to_cart svg {
+    margin: 0px;
 }
