--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
     --border_radius_image: 10px;
+    --margin_description: 3vw;
 }
 
 @font-face {
@@ -9,12 +10,14 @@
 
 html,
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     padding: 0;
     margin: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 
 .container {
@@ -28,17 +31,18 @@ body {
 
 .menu {
     width: 100%;
-    height: 10%;
+    height: 50px;
     display: flex;
-    background-color: #AC7B84;
+    align-items: center;
     margin-bottom: 110px;
 }
 
 .brand {
     width: 15%;
     height: 100%;
-    background-color: #4C243B;
     margin-right: 7%;
+    display: flex;
+    align-items: center;
 }
 
 .menu_tab {
@@ -46,27 +50,39 @@ body {
     height: 100%;
     display: flex;
     justify-content: space-between;
-    background-color: #B84A62;
     margin-right: 15%;
 }
 
 .tab {
     width: 15%;
     height: 100%;
-    background-color: #EC058E;
+    color: #69707D;
+    font-family: Kumbh Sans;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 26px;
+    display: flex;
+    align-items: center;
 }
 
 .shopping_icon {
     width: 5%;
     height: 100%;
-    background-color: #F5A6E6;
     margin-right: 3%;
+    display: flex;
+    align-items: center;
 }
 
 .account {
-    width: 5%;
-    height: 100%;
-    background-color: #62BBC1;
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    background: url('images/image-avatar.png'), lightgray 50% / cover no-repeat;
+}
+
+.account img {
+    border-radius: 50px;
 }
 
 .product {
@@ -84,29 +100,38 @@ body {
     flex-direction: column;
 }
 
+.main_photo {
+    width: 100%;
+    min-width: 300px;
+}
+
 .main_photo img {
-    max-width: 100%;
+    width: 100%;
     border-radius: var(--border_radius_image);
 }
 
 .secondary_photos {
     width: 100%;
+    min-width: 300px;
     display: flex;
     margin-top: 50px;
     justify-content: space-between;
+    overflow-x: auto
 }
 
 .secondary_photos img {
+    margin-right: 50px;
     max-width: 100px;
     border-radius: var(--border_radius_image);
 }
 
 .description {
     width: 40%;
-    height: 80%;
-    margin-left: 100px;
+    height: 100%;
+    margin-left: 2vw;
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
 }
 
 .title {
@@ -118,7 +143,7 @@ body {
     line-height: normal;
     letter-spacing: 2px;
     text-transform: uppercase;
-    margin-bottom: 80px;
+    margin-bottom: calc(var(--margin_description) + 2vw);
 }
 
 .product_name {
@@ -128,7 +153,7 @@ body {
     font-style: normal;
     font-weight: 700;
     line-height: 48px;
-    margin-bottom: 50px;
+    margin-bottom: var(--margin_description);
 }
 
 .product_description {
@@ -138,7 +163,7 @@ body {
     font-style: normal;
     font-weight: 400;
     line-height: 26px;
-    margin-bottom: 50px;
+    margin-bottom: var(--margin_description);
 }
 
 .price_information {
@@ -147,7 +172,7 @@ body {
     flex-wrap: wrap;
     width: 173px;
     height: 68px;
-    margin-bottom: 50px;
+    margin-bottom: var(--margin_description);
 }
 
 .price {
@@ -187,15 +212,26 @@ body {
 .command {
     display: flex;
     align-items: center;
-    height: 56px;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    height: 90px;
+    width: 100%;
+}
+
+.command_quantity {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-content: space-between;
+    width: 100px;
 }
 
 .delete {
-    margin-right: 60px
+    display: flex;
+    justify-content: center;
 }
 
 .quantity {
-    margin-right: 60px;
     color: #1D2026;
     text-align: center;
     font-family: 'Kumbh Sans';
@@ -205,9 +241,7 @@ body {
     line-height: normal;
 }
 
-.add {
-    margin-right: 50px;
-}
+.add {}
 
 .add_to_cart {
     display: flex;
@@ -232,4 +266,18 @@ body {
 
 .add_to_cart svg {
     margin: 0px;
+}
+
+@media screen and (max-width:1120px) {
+    .product {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .description {
+        margin-top: 100px;
+    }
+    .photos {
+        width: 300px;
+    }
 }
